[tool.poetry]
name = "ptb_firebase_persistence"
version = "0.1.0"
description = ""
authors = ["Mikhail Beliansky <mb@blaster.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
firebase-admin = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
