[tool.poetry]
name = "ptb_firebase_persistence"
version = "0.1.1"
description = ""
authors = ["Mikhail Beliansky <mb@blaster.ai>"]
readme = "README.md"
homepage = "https://github.com/licht1stein/ptb-firebase-persistence"

[tool.poetry.dependencies]
python = "^3.7"
firebase-admin = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
